# pi-snapshot-toolkit

Documents/vscode/pi-live-detect-rstp/: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONFIG_RESET_INSTRUCTIONS.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
Documents/vscode/pi-live-detect-rstp/src/pipeline/: config.py  infer_engine.py  postprocess.py  rtsp_client.py  serve.py
pi-snapshot-toolkit/: CHANGELOG.md  README.md  backup_pi.sh  launcher.sh  restore_pi.sh  setup_pi_snapshot.sh
